fixing a small bug that makes 800 and 600px views overlap

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ ul li a:active {
 
 /* Start responsive for 600 and 800 */
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 601px) and (max-width: 800px) {
   .heading {
     align-items: center;
   }
